--- a/package.json
+++ b/package.json
@@ -1,30 +1,42 @@
 {
-  "name": "w4ll-e-renderer-app",
-  "version": "1.0.1",
-  "description": "Aplicação de renderização de vídeo com Electron.",
+  "name": "w4ll-e-renderer",
+  "version": "2.0.0",
+  "description": "Aplicativo de desktop para automatizar a renderização e renomeação de vídeos.",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "build": "electron-builder"
+    "start": "npx electron .",
+    "build": "electron-builder",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "ffmpeg",
-    "electron",
-    "video"
-  ],
-  "author": "SIDNEY",
+  "author": "Sidney T. Silva",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^29.1.5",
+    "electron": "^28.2.0",
     "electron-builder": "^24.13.3"
   },
   "build": {
-    "appId": "com.you.walle",
-    "productName": "W4LL-E",
+    "appId": "com.stm.w4lle",
+    "productName": "W4ll-E",
+    "files": [
+      "main.js",
+      "preload.js",
+      "renderer.js",
+      "index.html",
+      "style.css",
+      "scripts/**/*",
+      "assets/**/*"
+    ],
+    "win": {
+      "target": "nsis",
+      "icon": "assets/icon.ico"
+    },
     "mac": {
-      "category": "public.app-category.video",
-      "icon": "build/icon.icns",
-      "target": "dmg"
+      "target": "dmg",
+      "icon": "assets/icon.icns"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
     }
   }
 }
