--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     },
     "nsis": {
       "oneClick": false,
-      "allowToChangeInstallationDirectory": true
+      "perMachine": true
     }
   }
 }
