--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     },
     "nsis": {
       "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
       "perMachine": true
     }
   }
