--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "w4ll-e-renderer",
-  "version": "2.2.1",
+  "version": "2.3.1",
   "description": "Aplicativo de desktop para automatizar a renderização e renomeação de vídeos.",
   "homepage": "https://github.com/sidneyts/W4ll-e",
   "main": "main.js",
@@ -25,7 +25,9 @@
   ],
   "dependencies": {
     "electron-log": "^5.1.2",
-    "electron-updater": "^6.1.1"
+    "electron-updater": "^6.1.1",
+    "i18next": "^23.11.5",
+    "i18next-fs-backend": "^2.3.1"
   },
   "devDependencies": {
     "electron": "^28.2.0",
@@ -48,7 +50,9 @@
       "index.html",
       "style.css",
       "scripts/**/*",
-      "assets/**/*"
+      "assets/**/*",
+      "i18n.js",
+      "locales/"
     ],
     "extraResources": [
       {
@@ -72,7 +76,6 @@
     },
     "nsis": {
       "oneClick": false,
-      "allowToChangeInstallationDirectory": true,
       "perMachine": true
     }
   }
