--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "w4ll-e-renderer",
-  "version": "2.3.1",
+  "version": "2.3.2",
   "description": "Aplicativo de desktop para automatizar a renderização e renomeação de vídeos.",
   "homepage": "https://github.com/sidneyts/W4ll-e",
   "main": "main.js",
@@ -25,6 +25,7 @@
   ],
   "dependencies": {
     "electron-log": "^5.1.2",
+    "electron-store": "^8.2.0",
     "electron-updater": "^6.1.1",
     "i18next": "^23.11.5",
     "i18next-fs-backend": "^2.3.1"
