feat: Implement import/export functionality for presets
- Added IPC handlers for importing and exporting presets in main.js.
- Updated preload.js to expose import/export functions to the renderer.
- Enhanced the UI in dom.js and events.js to include buttons for importing and exporting presets.
- Modified the presets modal in index.html to include action buttons for import/export.
- Improved styling in style.css for the new UI elements.
- Added logic to handle preset management, including validation and state updates.
- Introduced default presets in presets.json for initial setup.

--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     ],
     "files": [
       "src/**/*",
-      "locales/**/*"
+      "locales/**/*",
+      "presets.json"
     ],
     "extraResources": [
       {
