--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "electron .",
     "build": "electron-builder",
-    "publish": "electron-builder --publish always"
+    "publish": "electron-builder --publish always",
+    "test": "jest"
   },
   "author": "Sidney T. Silva",
   "license": "ISC",
@@ -32,7 +33,8 @@
   },
   "devDependencies": {
     "electron": "^28.2.0",
-    "electron-builder": "^24.13.3"
+    "electron-builder": "^24.13.3",
+    "jest": "^29.7.0"
   },
   "build": {
     "appId": "com.stm.w4lle",
